[gd_scene load_steps=3 format=3 uid="uid://0dho26h372r1"]

[ext_resource type="Script" uid="uid://ou8y2gpvrm3l" path="res://ui/shop_ui.gd" id="1_fscwk"]

[sub_resource type="ButtonGroup" id="ButtonGroup_6hffh"]

[node name="ShopUI" type="PanelContainer"]
modulate = Color(0.34733784, 0.41219994, 0.4996506, 1)
anchors_preset = -1
anchor_left = 0.42200002
anchor_top = 0.407
anchor_right = 0.578
anchor_bottom = 0.59300005
offset_left = 0.12197876
offset_top = 0.26400757
offset_right = -0.12200928
offset_bottom = -0.2640381
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fscwk")

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ShopTitle" type="Label" parent="MainVBox"]
layout_mode = 2
text = "Shop"
horizontal_alignment = 1

[node name="Items" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2

[node name="Item1" type="Button" parent="MainVBox/Items"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_6hffh")
text = "Item 1"
metadata/item_index = 0

[node name="Item2" type="Button" parent="MainVBox/Items"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_6hffh")
text = "Item 2"
metadata/item_index = 1

[node name="Item3" type="Button" parent="MainVBox/Items"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_6hffh")
text = "Item 3"
metadata/item_index = 2

[node name="ItemDescription" type="Label" parent="MainVBox"]
layout_mode = 2
text = "Select an item to buy!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="MainVBox/HBoxContainer"]
layout_mode = 2
text = "Buy"

[node name="CancelButton" type="Button" parent="MainVBox/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="MainVBox/HBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="MainVBox/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
